# agentic-tictactoe

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENT.md  AgentSkills.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT.md  README.md  codecov.yml  game-board-preview.html  pyproject.toml  run_demo.sh  run_tests.sh  start_ui.sh  test_each_provider.sh
.claude/: config.json
.claude/skills/: README.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/feature-branch-pr/: SKILL.md
.claude/skills/implementation-plan-updates/: SKILL.md
.claude/skills/phase-implementation/: SKILL.md
.claude/skills/test-writing/: SKILL.md
.github/workflows/: ci.yml
config/: config.json
docs/: ACCEPTANCE_CRITERIA_GUIDE.md  BRANCH_PROTECTION.md  DEVELOPMENT.md  implementation-plan.md  schemas.md  spec.md  ui-spec.md
docs/analysis/: README.md  test-coverage-analysis.md
docs/guides/: BRANCH_PROTECTION.md  CODECOV_SETUP.md  CONTRACT_TESTING.md  INTEGRATION_TEST_SETUP.md  LLM_TESTING.md  QUICK_START_INTEGRATION_TESTS.md  QUICK_TEST_GUIDE.md
docs/spec/: schemas.md  spec.md  ui-spec.md
docs/ui/: ui-spec.md
docs/ui/preview/: config-panel-preview.html  full-app-preview.html
scripts/: README.md  play_human_vs_ai.py  play_human_vs_bot.py  play_human_vs_human.py  play_via_api.py  run_llm_integration_tests.sh  test_api_keys.py  test_llm_providers.py  validate_llm_config.py
skills/: README.md
skills/api-endpoint-implementation/: SKILL.md
skills/commit-format/: SKILL.md
skills/error-handling/: SKILL.md
skills/implementation-plan-updates/: SKILL.md
skills/phase-implementation/: SKILL.md
skills/pre-commit-validation/: SKILL.md
skills/si/: SKILL.md
skills/subsection-implementation/: SKILL.md
skills/test-writing/: SKILL.md
src/: __init__.py
src/agents/: __init__.py  base.py  executor.py  executor_local.py  interfaces.py  pipeline.py  scout.py  scout_local.py  strategist.py  strategist_local.py
src/api/: __init__.py  main.py  models.py
src/api/routes/: agents.py  game.py
src/config/: __init__.py  llm_config.py
src/domain/: __init__.py  agent_models.py  errors.py  models.py  result.py
src/game/: __init__.py  coordinator.py  engine.py  state.py
src/llm/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py  provider.py  pydantic_ai_agents.py
src/metrics/: __init__.py  llm_metrics.py
src/models/: __init__.py  factory.py  shared_llm.py
src/schemas/: __init__.py  analysis.py  api.py  execution.py  game.py  results.py  strategy.py
src/services/: __init__.py  agent_service.py  game_service.py  interfaces.py
src/ui/: README.md  __init__.py  app.py  package-lock.json  package.json  vitest.config.ts
src/utils/: __init__.py  config.py  env_loader.py  logging_config.py  validators.py
tests/: conftest.py
tests/contract/: __init__.py  conftest.py  test_openapi_schema.py  test_response_contracts.py  test_schemathesis_api.py
tests/integration/: test_agent_pipeline.py  test_demo_llm.py
(+71 files in other folders)
